src/test/deca/context/valid/test_println.deca
// Description:
// Programme minimaliste utilisant println.
//
// Resultats : 
// Affichage de "Hello, world"
//
// Historique:
// cree le 06/01/2022

{
	println("Hello, world");
}
