src/test/deca/context/invalid/test_error_3.60-5.deca
// Description:
//    Soulève l'erreur (3.60)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'boolean' et 'string' ne sont pas compatibles avec l'opérateur binaire '<' (règle 3.60)
//
// Historique:
//      cree le 06/01/2022

{
 	boolean var;
    var = true < "hello";
}
